deploymentservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp-deployment
  labels:
    app: nodeapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      labels:
        app: nodeapp
    spec:
      containers:
      - name: nodeserver
        image: varmadocker26/nodeapp:latest
        resources:
          memory:
          cpu:
        ports:
        - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: service-nodeapp
spec:
  selector:
      app: nodeapp
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
