ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: nodeapp-ingress
spec:
    rules:
    - http:
        paths:
        - path: /api
          backend:
            serviceName: service-nodeapp
            servicePort: 3000
